# sjpy

./: .editorconfig  .env.example  .gitattributes  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: .env.example  .env_example  Dockerfile  devcontainer.json  docker-compose.yml  initialize_command.cmd  initialize_command.sh  post_create_command.sh
sj_utils/: __init__.py  audio.py  audio_utils.py  collection.py  collection_utils.py  decorator_utils.py  logger.py  memory.py  numpy.py  reference.py  statistics.py  statistics_utils.py  string_utils.py  typing.py  wrapper.py
sj_utils/evaluator/: __init__.py  asr.py  time_checker.py
sj_utils/file/: __init__.py  json.py  read_yaml.py  service.py  yaml.py
sjpy/: __init__.py  asynchronous.py  audio.py  collection.py  configure.py  decorator.py  download.py  excptn.py  logger.py  memory.py  numpy.py  reference.py  statistics.py  string.py  wrapper.py
sjpy/archive/: __init__.py  tar.py  zip.py
sjpy/decorator/: __init__.py  check_version.py  etc.py  singleton.py
sjpy/evaluator/: __init__.py  asr.py  latency_scorer.py  time_checker.py
sjpy/file/: __init__.py  algorithm.py  json.py  service.py  temp.py  yaml.py
test/: audio_utils.ipynb
test/evaluator/: asr.ipynb
tests/scripts/: audio_utils.ipynb
tests/scripts/evaluator/: asr.ipynb
