[project]
name = "sjpy"
version = "0.1.0"
description = "Custom Python utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "librosa>=0.11.0",
    "numpy>=1.23",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "jupyterlab>=4.4.10",
    "notebook>=7.4.7",
]
test = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-dotenv>=0.5.2",
    "ruff>=0.15.8",
    "scipy-stubs>=1.15.3.0",
    "types-psutil>=7.2.2.20260130",
    "types-pyyaml>=6.0.12.20250915",
    "types-tqdm>=4.67.3.20260303",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["ffmpeg", "soundfile"]
ignore_missing_imports = true

[tool.pytest.ini_options]
env_files=[".env"]
addopts = "--ignore=tests/scripts"

[tool.setuptools.packages.find]
where = ["."]
include = ["sjpy*"]
